--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Requires = "ae029012-a4dd-5104-9daa-d747884805df"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [compat]
+Random = "~0.1"
 DSP = "~0.6"
 Documenter = "~0.23"
 DocumenterTools = "~0.1"
